2012-01-28  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/x86_64/fpu/bits/mathinline.h (__signbitl): Optimize a bit.
	Avoid unnecessary __WORDSIZE == 64 test.
	(fmaxf): Use VEX format if possible.
	(fmax): Likewise.
	(fminf): Likewise.
	(fmin): Likewise.

	* config.h.in: Define HAVE_SSE2AVX_SUPPORT.
	* math/math_private.h: Remove libc_fegetround* and
	libc_fesetround*.
	* sysdeps/i386/configure.in: Check for -msse2avx.
	* sysdeps/x86_64/fpu/math_private.h: Use VEX-encoded instructions
	also if SSE2AVX is defined.
	Remove libc_fegetround* and libc_fesetround*.
	* sysdeps/x86_64/fpu/multiarch/Makefile: Compile *-avx functions
	if config-cflags-sse2avx is yes.  Also add -DSSE2AVX to defines.
	* sysdeps/x86_64/fpu/multiarch/e_atan2.c: Use HAS_AVX again instead
	of HAS_YMM_USABLE.
	* sysdeps/x86_64/fpu/multiarch/e_exp.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/e_log.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/s_atan.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/s_sin.c: Likewise.
	* sysdeps/x86_64/fpu/multiarch/s_tan.c: Likewise.

	* sysdeps/x86_64/fpu/math_private.h: Simplify use of AVX instructions.

2012-01-19  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc32/a2/memcpy.S: Fix for when cache line
	size is not set.
	* sysdeps/powerpc/powerpc64/a2/memcpy.S: Likewise.

2012-01-27  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13618]
	* elf/dl-open.c (dl_open_worker): Sort objects by dependency before
	relocation.
	* Makeconfig (libm): Define.
	* elf/Makefile: Add rules to build and run tst-relsort1.
	* elf/tst-relsort1.c: New file.
	* elf/tst-relsort1mod1.c: New file.
	* elf/tst-relsort1mod2.c: New file.

2012-01-27  Joseph Myers  <joseph@codesourcery.com>

	* math/s_ldexp.c: Remove __STDC__ conditionals.
	* math/s_ldexpf.c: Likewise.
	* math/s_ldexpl.c: Likewise.
	* math/s_nextafter.c: Likewise.
	* math/s_nexttowardf.c: Likewise.
	* math/s_significand.c: Likewise.
	* math/s_significandf.c: Likewise.
	* math/s_significandl.c: Likewise.